--- a/view/index.html
+++ b/view/index.html
@@ -1,59 +1,142 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Socket.IO chat</title>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>First one chat</title>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css">
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
   
-
-    <style>
-body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-  #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-  #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-  #input:focus { outline: none; }
-  #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-  #messages { list-style-type: none; margin: 0; padding: 0; }
-  #messages > li { padding: 0.5rem 1rem; }
-  #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
-
-  </head>
-
-
-
-
-  <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
-
-    <script src="/socket.io/socket.io.js"></script>
-    
-
-<script>
+</head>
+<body>
   
-const socket = io();
-const form = document.getElementById('form');
-const input = document.getElementById('input');
+  <div id="frame">
+    <div id="sidepanel">
+      <div id="profile">
+        <div class="wrap">
+          <img id="profile-img" src="http://emilcarlsson.se/assets/mikeross.png" class="online" alt="" />
+          <p>Mike Ross</p>
+          <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
+          <div id="status-options">
+            <ul>
+              <li id="status-online" class="active"><span class="status-circle"></span> <p>Online</p></li>
+              <li id="status-away"><span class="status-circle"></span> <p>Away</p></li>
+              <li id="status-busy"><span class="status-circle"></span> <p>Busy</p></li>
+              <li id="status-offline"><span class="status-circle"></span> <p>Offline</p></li>
+            </ul>
+          </div>
+          <div id="expanded">
+            <label for="twitter"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></label>
+            <input name="twitter" type="text" value="mikeross" />
+            <label for="twitter"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></label>
+            <input name="twitter" type="text" value="ross81" />
+            <label for="twitter"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></label>
+            <input name="twitter" type="text" value="mike.ross" />
+          </div>
+        </div>
+      </div>
+      <div id="search">
+        <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
+        <input type="text" placeholder="Search contacts..." />
+      </div>
+      <div id="contacts">
+        <ul>
+          <li class="contact">
+            <div class="wrap"  id="wrap-contact">
+              <span class="contact-status online"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+          <li class="contact active">
+            <div class="wrap" id="contact active" >
+              <span class="contact-status busy"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+          <li class="contact">
+            <div class="wrap" id="wrap">
+              <span class="contact-status away"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+         
+      </div>
+      <div id="bottom-bar">
+        <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
+        <button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
+      </div>
+    </div>
+    <div class="content" id="content">
+      <div class="contact-profile" id="contact-profile">
+        <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
+        <p>Harvey Specter</p>
+        <div class="social-media" id="social-media">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+           <i class="fa fa-instagram" aria-hidden="true"></i>
+        </div>
+      </div>
+      <div class="messages" id="messages">
+        aqui vai a mensagem 
+      </div>
+      <div class="message-input" id="message-input">
+        <div class="wrap"  id="wrap-input-button">
+        <input type="text" placeholder="Write your message..."  id="text-message"/>
+        <i class="fa fa-paperclip attachment" aria-hidden="true"></i>
+        <button class="submit" id="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-form.addEventListener('submit', function(e) {
-  e.preventDefault();
-  if (input.value) {
-    socket.emit('chat message', input.value);
-    input.value = '';
-  }
-});
 
+  <script src="/socket.io/socket.io.js"></script>>
+  <script src="/src/util/format.js"></script>
+  <script src="/src/app.js"></script>
+  <script src="/src/controller/controller.js"></script>
 
-socket.on('chat message', function(msg) {
-  var item = document.createElement('li');
-  item.textContent = msg;
-  messages.appendChild(item);
-  window.scrollTo(0, document.body.scrollHeight);
-});
-</script>
+  <script>
+
+    const socket = io()
+
+    const form = document.getElementById('submit')
+
+    const input = document.getElementById('text-message')
+
+    const messages = document.getElementById('messages')
 
     
-  </body>
+  form.addEventListener('click', (e)=> {
+    e.preventDefault();
+    if (input.value) {
+      socket.emit('chat message', input.value);
+      input.value = '';
+    }
+  });
+
+  socket.on('chat message', function(msg) {
+    var item = document.createElement('li');
+    item.textContent = msg;
+    messages.appendChild(item);
+   window.scrollTo(0, document.body.scrollHeight);
+  });
+
+  </script>
+
+</body>
 </html>
