--- a/view/index.html
+++ b/view/index.html
@@ -104,13 +104,13 @@
     </div>
   </div>
 
-
-  <script src="/socket.io/socket.io.js"></script>>
+<!-- <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>>  -->
   <script src="/src/util/format.js"></script>
   <script src="/src/app.js"></script>
   <script src="/src/controller/controller.js"></script>
 
-  <script>
+ <!-- <script>
 
     const socket = io()
 
@@ -136,7 +136,7 @@
    window.scrollTo(0, document.body.scrollHeight);
   });
 
-  </script>
+  </script>  -->
 
 </body>
 </html>
