--- a/view/index.html
+++ b/view/index.html
@@ -76,6 +76,42 @@
           </li>
          
       </div>
+      <div id="contacts2">
+        <ul>
+          <li class="contact">
+            <div class="wrap"  id="wrap-contact">
+              <span class="contact-status online"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+          <li class="contact active">
+            <div class="wrap" id="contact active" >
+              <span class="contact-status busy"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+          <li class="contact">
+            <div class="wrap" id="wrap">
+              <span class="contact-status away"></span>
+              <img src="" alt="" />
+              <div class="meta">
+                <p class="name"></p>
+                <p class="preview"></p>
+              </div>
+            </div>
+          </li>
+         
+      </div>
+
+
       <div id="bottom-bar">
         <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
         <button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
@@ -106,9 +142,9 @@
 
 <!-- <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
   <script src="/socket.io/socket.io.js"></script>>  -->
-  <script src="/src/util/format.js"></script>
-  <script src="/src/app.js"></script>
   <script src="/src/controller/controller.js"></script>
+  <script src="/src/app.js"></script>
+  <script src="/src/util/format.js"></script>
 
  <!-- <script>
 
