--- a/view/index.html
+++ b/view/index.html
@@ -110,8 +110,8 @@
     </div>
   </div>
 
-<!-- <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
-  <script src="/socket.io/socket.io.js"></script>>  -->
+  <script src="node_modules/socket.io/client-dist/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>> 
   <script src="/src/util/format.js"></script>
   <script src="/src/controller/controller.js"></script>
   <script src="/src/app.js"></script>
