:package: Atualização Eventos

--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -117,14 +117,19 @@
   <script src="../util/format.js" ></script>
   <script src="../controller/controller.js"></script>
   <script src="../app.js"  ></script>
-<!--  <script src="/socket.io/socket.io.js"></script> -
+ <!-- <script src="/socket.io/socket.io.js"></script> 
 
 
 
   
 
 <script>
- var socket = io("http://localhost:3000/"); 
+
+ var socket = io();
+ 
+
+
+
 </script>
  -->
 
