--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -113,25 +113,10 @@
       </div>
     </div>
   </div>
-  
-  <script src="../util/format.js" ></script>
-  <script src="../controller/controller.js"></script>
-  <script src="../app.js"  ></script>
- <!-- <script src="/socket.io/socket.io.js"></script> 
 
-
-
-  
-
-<script>
-
- var socket = io();
- 
-
-
-
-</script>
- -->
+  <script src="/public/src/util/format.js"></script>
+  <script src="/public/src/controller/controller.js"></script>
+  <script src="/public/src/app.js"></script>
 
 </body>
 </html>
