--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -102,7 +102,9 @@
         </div>
       </div>
       <div class="messages" id="messages">
-        aqui vai a mensagem 
+       <div id="message">
+         
+       </div>
       </div>
       <div class="message-input" id="message-input">
         <div class="wrap"  id="wrap-input-button">
