--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -104,7 +104,10 @@
       <div class="messages" id="messages">
        <div id="message">
          
-       </div>
+       </div> <div class="messages" id="messages">
+        <div id="message2">
+          
+        </div>
       </div>
       <div class="message-input" id="message-input">
         <div class="wrap"  id="wrap-input-button">
@@ -119,6 +122,7 @@
   <script src="/public/src/util/format.js"></script>
   <script src="/public/src/controller/controller.js"></script>
   <script src="/public/src/app.js"></script>
+ 
 
 </body>
 </html>
