--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -122,32 +122,11 @@
     </div>
   </div>
 
-  <script src="/public/src/util/format.js"></script>
+<!--   <script src="/public/src/util/format.js"></script>
   <script src="/public/src/controller/controller.js"></script>
-  <script src="/public/src/app.js"></script>
+  <script src="/public/src/app.js"></script> -->
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    
-  const socket = io();
+  <script src="/public/src/controller/chat.js"></script>
 
-const messages = document.getElementById('messages');
-const form = document.getElementById('submit');
-const input = document.getElementById('text-message');
-
-form.addEventListener('click', function(e) {
-  e.preventDefault();
-  if (input.value) {
-    socket.emit('chat message', input.value);
-    input.value = '';
-  }
-});
-
-socket.on('chat message', function(msg) {
-  var item = document.createElement('li');
-  item.textContent = msg;
-  messages.appendChild(item);
-  window.scrollTo(0, document.body.scrollHeight);
-});
-  </script>
 </body>
 </html>
