--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -122,11 +122,11 @@
     </div>
   </div>
 
-<!--   <script src="/public/src/util/format.js"></script>
-  <script src="/public/src/controller/controller.js"></script>
-  <script src="/public/src/app.js"></script> -->
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/public/src/controller/chat.js"></script>
+  <script src="/public/src/util/format.js"></script>
+  <script src="/public/src/controller/controller.js"></script>
+  <script src="/public/src/app.js"></script>
+
 
 </body>
 </html>
