--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First one chat</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
   
 </head>
@@ -102,15 +102,11 @@
         </div>
       </div>
       <div class="messages" id="messages">
-       <div id="message">
+
          
        </div>
        
-       <div class="messages" id="messages">
-        <div id="message2">
-          
-        </div>
-      </div>
+      
       <div class="message-input" id="message-input">
         <div class="wrap"  id="wrap-input-button">
         <input type="text" placeholder="Write your message..."  id="text-message"/>
