--- a/public/src/view/styles/style.css
+++ b/public/src/view/styles/style.css
@@ -707,3 +707,10 @@ vertical-align: baseline;
 margin-left: 500px;
 margin-right: 1px;
 }
+
+li .other{
+
+  color: #e74c3c;
+  margin-right: 1px;
+
+}
