--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -17,7 +17,7 @@
     <div id="sidepanel">
       <div id="profile">
         <div class="wrap" id="my-photo">
-          <input type="file" name="photo" id="photo" style ='display : none'>
+          <input type="file" name="photo" id="photo" style ='display :none'>
           <img id="profile-img" src=" "class="online" alt="" />
           <p>Mike Ross</p>
           <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
@@ -39,11 +39,11 @@
           </div>
         </div>
       </div>
-      <div id="search">
+      <div id="search">          
         <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
         <input type="text" placeholder="Search contacts..." />
       </div>
-      <div id="contacts">
+      <div id="contacts">        
         <ul>
           <li class="contact">
             <div class="wrap"  id="wrap-contact">
@@ -77,15 +77,15 @@
           </li>
       </div>
 
-      <div id="panelAddcontact" style=" background-color: brown;">
-        Meus contatos 
+<!--       <div id="panelAddcontact" style=" background-color: brown;">
+    
          
       </div>
 
       <div id="panelSttings" style=" background-color: brown;">
-       Configurações
+      
          
-      </div>
+      </div> -->
       <div id="bottom-bar">
         <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
         <button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
