--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -19,7 +19,7 @@
         <div class="wrap" id="my-photo">
           <input type="file" name="photo" id="photo" style ='display :none'>
           <img id="profile-img" src=" "class="online" alt="" />
-          <p>Mike Ross</p>
+          <p class="name" id="name">Mike Ross</p>
           <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
           <div id="status-options">
             <ul>
