Atualizando as configurações

--- a/public/src/view/cadastro.html
+++ b/public/src/view/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 <body>
         <!--FORMULÁRIO DE CADASTRO-->
         <div id="cadastro" style="">
-            <form method="post" action=""> 
+            <form method="#" action=""> 
               <h1>Cadastro</h1> 
 
               <p> 
@@ -38,5 +38,8 @@
               </p>
             </form>
           </div>
+
+          <script src="../controller/formcad.js"></script>
+          <script src="/public/src/util/format.js"></script>
 </body>
 </html>
