:package: Sistema de login e cadastro

--- a/public/src/view/index.html
+++ b/public/src/view/index.html
@@ -15,7 +15,7 @@
         <div class="content">      
           <!--FORMULÁRIO DE LOGIN-->
           <div id="login">
-            <form method="get" action="chat.html" id="form"> 
+            <form method="get" action="#" id="formLogin"> 
               <h1>Login</h1> 
               <p> 
                 <label for="email_login">Seu e-mail</label>
@@ -44,7 +44,7 @@
         </div>
       </div> 
       <script  type="module" src="/public/src/controller/service.js"></script>
-      <script type="module" src="/public/src/controller/formcad.js"></script>
+      <script type="module" src="/public/src/controller/login.js"></script>
       
 </body>
 </html>
