--- a/public/src/view/chat.html
+++ b/public/src/view/chat.html
@@ -118,10 +118,10 @@
     </div>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/public/src/util/format.js"></script>
-  <script src="/public/src/controller/controller.js"></script>
-  <script src="/public/src/app.js"></script>
+  <script type="module" src="/socket.io/socket.io.js"></script>
+  <script type="module" src="/public/src/util/format.js"></script>
+  <script type="module" src="/public/src/app.js"></script>
+  <script type="module" src="/public/src/controller/controller.js"></script>
 
 
 </body>
