:package: Algumas alterações

--- a/public/src/view/chat.html
+++ b/public/src/view/chat.html
@@ -110,8 +110,10 @@
       <div class="message-input" id="message-input">
         <div class="wrap"  id="wrap-input-button">
         <input type="text" placeholder="Write your message..."  id="text-message"/>
+      <button class="submit" id="submit">
         <i class="fa fa-paperclip attachment" aria-hidden="true"></i>
         <i class="bi bi-mic attachment" aria-hidden="true"></i>
+      </button>
         <button class="submit" id="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
         </div>
       </div>
