--- a/public/src/view/cadastro.html
+++ b/public/src/view/cadastro.html
@@ -34,7 +34,7 @@
               
               <p class="link">  
                 Já tem conta?
-                <a href="login.html"> Ir para Login </a>
+                <a href="index.html"> Ir para Login </a>
               </p>
             </form>
           </div>
