--- a/database/public/src/views/cadastro.ejs
+++ b/database/public/src/views/cadastro.ejs
@@ -4,43 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="./styles/login.css">
     <title>Cadastro</title>
 </head>
 <body>
         <!--FORMULÁRIO DE CADASTRO-->
         <div id="cadastror">
-            <form id="form"> 
-              <h1>Cadastro</h1> 
+            <form id="form">
+              <h1>Cadastro</h1>
 
-              <p> 
+              <p>
                 <label for="nome_cad">Seu nome</label>
                 <input id="nome_cad" name="nome_cad" required="required" type="text" placeholder="Seu nome" />
               </p>
-              
-              <p> 
+
+              <p>
                 <label for="email_cad">Seu e-mail</label>
-                <input id="email_cad" name="email_cad" required="required" type="email" placeholder="seuemail@seuemail.com"/> 
+                <input id="email_cad" name="email_cad" required="required" type="email" placeholder="seuemail@seuemail.com"/>
               </p>
-              
-              <p> 
+
+              <p>
                 <label for="senha_cad">Sua senha</label>
                 <input id="senha_cad" name="senha_cad" required="required" type="password" placeholder="Digite uma senha .."/>
               </p>
-              
-              <p> 
+
+              <p>
                 <button type="submit"  class="submit" id="cadastrar" >Cadastrar</button>
               </p>
-              
-              <p class="link">  
+
+              <p class="link">
                 Já tem conta?
                 <a href="index.html"> Ir para Login </a>
               </p>
             </form>
           </div>
 
-          <script type="module" src="/public/src/controller/service.js" ></script>
-          <script type="module"  src="/public/src/controller/formcad.js" ></script>
-      
+          <script type="module" src="../controller/service.js" ></script>
+          <script type="module"  src="../controller/formcad.js" ></script>
+
 </body>
 </html>
