--- a/database/public/src/views/chat.ejs
+++ b/database/public/src/views/chat.ejs
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First one chat</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
-  
+
 </head>
 <body>
-  
+
   <div id="frame">
     <div id="sidepanel">
       <div id="profile">
@@ -39,11 +39,11 @@
           </div>
         </div>
       </div>
-      <div id="search">          
+      <div id="search">
         <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
         <input type="text" placeholder="Search contacts..." />
       </div>
-      <div id="contacts">        
+      <div id="contacts">
         <ul>
           <li class="contact">
             <div class="wrap"  id="wrap-contact">
@@ -78,13 +78,13 @@
       </div>
 
       <div id="panelAddcontact" >
-    
-         
+
+
       </div>
 
       <div id="panelSttings">
-      
-         
+
+
       </div>
       <div id="bottom-bar">
         <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
@@ -103,10 +103,10 @@
       </div>
       <div class="messages" id="messages">
 
-         
+
        </div>
-       
-      
+
+
       <div class="message-input" id="message-input">
         <div class="wrap"  id="wrap-input-button">
         <input type="text" placeholder="Write your message..."  id="text-message"/>
