--- a/database/public/src/views/cadastro.ejs
+++ b/database/public/src/views/cadastro.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/login.css">
+    <link rel="stylesheet" href="src/views/styles/login.css">
     <title>Cadastro</title>
 </head>
 <body>
@@ -34,13 +34,13 @@
 
               <p class="link">
                 Já tem conta?
-                <a href="index.html"> Ir para Login </a>
+                <a href="index.ejs"> Ir para Login </a>
               </p>
             </form>
           </div>
 
-          <script type="module" src="../controller/service.js" ></script>
-          <script type="module"  src="../controller/formcad.js" ></script>
+          <script type="module" src="src/controller/service.js" ></script>
+          <script type="module"  src="src/controller/formcad.js" ></script>
 
 </body>
 </html>
