--- a/database/public/src/views/chat.ejs
+++ b/database/public/src/views/chat.ejs
@@ -8,7 +8,7 @@
   <title>First one chat</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="src/views/styles/style.css">
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 
 </head>
 <body>
@@ -120,7 +120,7 @@
     </div>
   </div>
 
-  <script type="module" src="/socket.io/socket.io.js"></script>
+<!--   <script type="module" src="/socket.io/socket.io.js"></script> -->
   <script type="module" src="src/util/format.js"></script>
   <script type="module" src="src/app.js"></script>
   <script type="module" src="src/controller/controller.js"></script>
